# VirtualMusic

./: CMakeLists.txt  README.md  hand_detect (Vigneshwar’s MacBook Pro's conflicted copy 2016-03-12)  hand_detect.cpp
java_jfugue_server/: Test.java
