cmake_minimum_required(VERSION 2.8)
project( VirtualMusic )
find_package( OpenCV 2 REQUIRED )
find_package( X11 REQUIRED)
add_executable( hand_detect hand_detect.cpp )
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
  MESSAGE(STATUS "Curl libraries found at: ${CURL_LIBRARIES}")
  MESSAGE(STATUS "Curl includes found at: ${CURL_INCLUDE_DIRS}")
else()
  MESSAGE(SEND_ERROR "Could not find cURL on your system")
ENDIF(CURL_FOUND)
target_link_libraries( hand_detect ${OpenCV_LIBS} ${X11_LIBRARIES} ${CURL_LIBRARIES}) 